# ftd2xx

./: CMakeLists.txt  LICENSE.txt  README.md  ftd2xx-config.cmake.in  ftd2xx-wix-patch.xml
.github/workflows/: upload-msi.yml
